# apple-health-mcp-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  SECURITY.md  manifest.json  pyproject.toml
.claude/rules/: dev-flow.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/dogfood/: adversarial-attack-log.md  v0-3-0-rc2-dogfood-results.md  v0-3-0-rc2-test-plan.md  v0-5-0-dogfood-results.md  v0-5-0-test-plan.md  v0-5-1-test-plan.md
docs/i18n/: en.json  ja.json
docs/js/: animations.js  i18n.js
docs/style/: main.css  tokens.css
internal/: dev-flow.md
internal/dogfood/: v0-3-0-rc2-dogfood-results.md  v0-3-0-rc2-test-plan.md  v0-5-0-adversarial-results-2.md  v0-5-0-adversarial-results.md  v0-5-1-dogfood-results.md  v0-5-1-test-plan.md  v0-6-0-adversarial-results.md  v0-6-0-dogfood-autonomous-results.md  v0-6-0-test-plan.md  v0-6-1-test-plan.md
scripts/: check_lp_no_version_literal.py  check_version_parity.py
src/apple_health_mcp/: __init__.py  __main__.py  _zip_util.py  cli.py  exceptions.py  logging_config.py
src/apple_health_mcp/db/: __init__.py  connection.py  import_jobs.py  migrations.py  schema.py
src/apple_health_mcp/importers/: __init__.py  _bulk.py  _bulk_arrow.py  _existing_hashes.py  _hash.py  _tz.py  dedup.py  ecg.py  gpx.py  orchestrator.py  xml.py  zip_extract.py
src/apple_health_mcp/models/: __init__.py
src/apple_health_mcp/server/: __init__.py  data_state.py  query.py  query_error.py  safety.py  server.py
src/apple_health_mcp/server/tools/: __init__.py  _async_blurb.py  _gates.py  _zip_inspect.py  get_activity_summaries.py  get_correlation_details.py  get_ecg_data.py  get_heart_rate_samples.py  get_import_history.py  get_import_status.py  get_me_attributes.py  get_record_statistics.py  get_server_info.py  get_workout_details.py  get_workout_route.py  import_zip.py  list_correlations.py  list_data_sources.py  list_ecg_readings.py  list_record_types.py  list_state_of_mind.py  list_workouts.py  list_zips.py  query_records.py  run_custom_query.py
tests/: _helpers.py  conftest.py
tests/fixtures/: README.md  sample_ecg.csv  sample_export.xml  sample_workout_route.gpx
tests/fixtures/adversarial/: README.md  generate.py
tests/integration/: test_error_envelopes.py  test_input_validation.py  test_security.py  test_smoke.py
tests/unit/: test_cli.py  test_docs_in_sync.py  test_exceptions.py  test_logging_config.py  test_package.py
tests/unit/db/: __init__.py  test_connection.py  test_import_jobs.py  test_migrations.py  test_schema.py
tests/unit/importers/: __init__.py  test_bulk.py  test_bulk_arrow.py  test_dedup.py  test_ecg.py  test_gpx.py  test_hash.py  test_incremental_reimport.py  test_orchestrator.py  test_tz.py  test_xml.py  test_xml_state_of_mind.py
tests/unit/server/: conftest.py  test_data_state.py  test_import_jobs_async.py  test_query.py  test_query_error.py  test_safety.py  test_server.py  test_tools.py  test_zip_tools.py
