[project]
name = "apple-health-mcp-server"
version = "0.4.1"
description = "Make Claude your personal health AI — locally."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Yoshinori Ishii" },
]
keywords = ["apple-health", "healthkit", "mcp", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.0",
    "lxml>=5.0",
    "duckdb>=1.0",
    "pydantic>=2.0",
    "chardet>=5.0",
    "typer>=0.12",
    "sqlglot>=25.0",
    # DuckDB's Python binding lazily imports pytz when materialising a
    # TIMESTAMPTZ value into a tz-aware ``datetime``. zoneinfo would be
    # the obvious stdlib choice but DuckDB has not migrated; declare the
    # transitive dependency explicitly so a fresh `uv sync` succeeds.
    "pytz>=2024.1",
    # PyArrow powers the importer bulk-load path (issue #50). A wheel
    # adds ~30 MB to the install footprint; the module is imported only
    # by the importer package so `serve` startup is unaffected. A unit
    # test guards the import boundary.
    "pyarrow>=18.0",
]

[project.scripts]
apple-health-mcp-server = "apple_health_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/rinoshiyo/apple-health-mcp-server"
Repository = "https://github.com/rinoshiyo/apple-health-mcp-server"
Issues = "https://github.com/rinoshiyo/apple-health-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_health_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "lxml-stubs>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]

[tool.ruff.lint.flake8-bugbear]
# typer relies on function-call defaults to declare CLI options; do not flag them as B008.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
# Importer test fixtures embed multi-attribute Apple Health XML elements
# verbatim; wrapping them would change the parser's input and defeat the
# fixture. Allow long lines in the importer test files only.
"tests/unit/importers/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["apple_health_mcp"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["duckdb", "chardet", "sqlglot", "sqlglot.expressions", "pyarrow"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --cov=apple_health_mcp --cov-branch --cov-fail-under=100 --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["apple_health_mcp"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
